Fixed horizontal scroll issues

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,3 +1,8 @@
+html {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
+
 .hidden.menu {
   display: none;
 }
